--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -42,7 +42,7 @@ jobs:
       fail-fast: false
       matrix:
         job:
-          - { name: 'hiddify-core-android', os: 'ubuntu-latest', target: 'android' }
+          - { name: 'hiddify-core-android', os: 'ubuntu-latest', target: 'android-amd64,android-arm64' }
           - { name: 'hiddify-core-linux-amd64', os: 'ubuntu-20.04', target: 'linux-amd64' }
           - { name: "hiddify-core-windows-amd64", os: 'ubuntu-latest', target: 'windows-amd64', aarch: 'x64' }
           - { name: "hiddify-core-macos-universal", os: 'macos-12', target: 'macos-universal' }
